--- a/cv-biology.tex
+++ b/cv-biology.tex
@@ -43,10 +43,10 @@
 \address{4235 SE 11th}{Portland OR 97202}% optional, remove / comment the line if not wanted; the "postcode city" and "country" arguments can be omitted or provided empty
 \phone[mobile]{+1~(503)~781~3891}                   % optional, remove / comment the line if not wanted; the optional "type" of the phone can be "mobile" (default), "fixed" or "fax"
 \email{ryan.spangler@gmail.com}                               % optional, remove / comment the line if not wanted
-\homepage{ryanspangler.com}                         % optional, remove / comment the line if not wanted
+\homepage{elephantlaboratories.com}                         % optional, remove / comment the line if not wanted
 \social[github]{prismofeverything}                              % optional, remove / comment the line if not wanted
 \social[linkedin]{ryankspangler}                        % optional, remove / comment the line if not wanted
-\social[twitter]{ryanspangler}                             % optional, remove / comment the line if not wanted
+\social[twitter]{elephantnahpele}                             % optional, remove / comment the line if not wanted
 %\extrainfo{additional information}                 % optional, remove / comment the line if not wanted
 %\photo[64pt][0.4pt]{picture}                       % optional, remove / comment the line if not wanted; '64pt' is the height the picture must be resized to, 0.4pt is the thickness of the frame around it (put it to 0pt for no frame) and 'picture' is the name of the picture file
 \quote{Patterns in Connections}                                 % optional, remove / comment the line if not wanted
@@ -88,8 +88,8 @@
 \cventry{1999--2001}{Undergraduate Study}{Oberlin College}{Oberlin OH}{}{Cognitive Science, Computer Science}
 
 \section{Technology}
-\cvitem{Languages}{Scala, Clojure, Python, JavaScript, C++, Java, Bash, SQL}
-\cvitem{Tools}{Titan, Kafka, Postgresql, Git, Docker, Unix, Emacs, GLSL}
+\cvitem{Languages}{Clojure, Scala, JavaScript, Python, C++, Java, Bash, SQL}
+\cvitem{Tools}{JanusGraph, Kafka, Postgresql, Mongo, Git, Docker, Unix, Emacs, GLSL}
 \cvitem{Areas}{Biological Modeling, Graph Databases, Network Science, Machine Learning, Data Visualization, Generative Music}
 %% \cvitem{Skills}{Asynchronous Computation, Websockets, Unix/linux Server Administration, Distributed Version Control}
 
@@ -99,21 +99,24 @@
 \cventry{2016--Present}{Software Engineer}{Computational Biology at OHSU}{Portland OR}{}{At OHSU I work with scientists and engineers to determine what infrastructure and analysis is needed to support all of the various research efforts at the University. My main focus is the development of a large graph database to collect and integrate all of the isolated biological data silos throughout the world and provide a means to query, analyze and visualize this data as a whole.\newline{}
 \textbf{Achievements}:
 \begin{itemize}
-\item Engineered a large graph database system that automatically transforms and integrates all incoming data into a single graph.
+\item Engineered a large graph database system that automatically transforms and integrates all incoming data into a single graph
+\url{http://bmeg.io/}
 \item Created a schema to encode queries themselves as data so they can be programmatically generated, optimized and processed.
 \item Translated a series of requirements from researchers and scientists into a working system that provided these analyses.
 \item Developed systems of statistical analysis for existing experiments and data.
 \item Created a visualization framework to pull together all of the various visualization methods into a general and reusable package.
-\item Working on a distributed event system to trigger pattern-discovery analyses as data streams into the system.
+\item Engineered a distributed event system to trigger pattern-discovery analyses as data streams into the system.
 \end{itemize}}
 
 \cventry{2014--2016}{Lead Developer}{Little Bird Technologies}{Portland OR}{}{At Little Bird I take their mass of social network data and apply a variety of statistical, graph theoretical and machine learning approaches to find patterns and draw conclusions from that data.\newline{}
 \textbf{Achievements}:
 \begin{itemize}
 \item Used bayesian networks and decision trees to build a classification system for an initiative from the Gates Foundation.
-\item Built a 3d network visualization to explore and interact with vast amounds of network data.
+\item Built a 3d network visualization to explore and interact with vast, interconnected data.
 \item Migrated the flat document data model into a graph database oriented around the relationships between semantic terms and networks of people.
 \item Took a naive analysis algorithm and parallelized it to work over any sized cluster of independent workers.
+\item Open sourced much of the infrastructure that powers the application:
+\url{https://github.com/littlebird}
 %% \item Built a recommendation engine based on Jaccard similarity.
 %% \item Identified and expunged a pre-existing and propagating data corruption, building an ongoing data validation system in the process.
 \item Instituted a workshop for collaboratively improving the whole team's coding and software development skills, starting by implementing well-known graph algorithms.
@@ -125,7 +128,7 @@
 \textbf{Achievements}:
 \begin{itemize}
 \item Created Caribou --- an open source Clojure web ecosystem for building large high-performance web applications with great alacrity.
-%% \url{http://let-caribou.in}
+\url{https://github.com/caribou}
 %%   \begin{itemize}
 %%   \item Lead an interdisciplinary team in developing a large open source project
 %%   \item Managed an open source community by constructively listening to feedback and reviewing and merging pull requests
